<resources>
    <string name="app_name">instagram challenge</string>

    <string name="from_eng">from</string>
    <string name="loading_eng">loading</string>

    <string name="home_eng">home</string>
    <string name="search_eng">search</string>
    <string name="video_eng">video</string>
    <string name="shop_eng">shop</string>
    <string name="my_page_eng">my page</string>
    <string name="facebook_eng">Facebook</string>
    <string name="twitter_eng">Twitter</string>
    <string name="tumblr_eng">Tumblr</string>
    

    <string name="or">또는</string>
    <string name="login">로그인</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="password">비밀번호</string>
    <string name="phone_number">전화번호</string>
    <string name="email">이메일</string>
    <string name="next">다음</string>
    <string name="name">이름</string>
    <string name="add_name">이름 추가</string>
    <string name="change_phone_number">전화번호 변경</string>
    <string name="resend_sms">SMS 재전송</string>
    <string name="auth_code">인증 코드</string>
    <string name="add_birthday">생일 추가</string>
    <string name="user_name">사용자 이름</string>
    <string name="essential">(필수)</string>
    <string name="cancel">취소</string>
    <string name="recent_content">최근 항목</string>
    <string name="new_feed">새 게시물</string>유
    <string name="share">공유</string>
    <string name="confirmation">확인</string>
    <string name="phrases">문구</string>
    <string name="posting">게시</string>
    <string name="feed">게시물</string>
    <string name="follower">팔로워</string>
    <string name="following">팔로잉</string>글
    <string name="comment">댓글</string>

    <string name="try_again">다시 시도</string>
    <string name="do_sign_up">가입하기</string>
    <string name="move_back">돌아가기</string>
    <string name="create_password">비밀번호 만들기</string>
    <string name="agree_to_terms">약관 동의</string>
    <string name="agree_all">모두 동의</string>
    <string name="see_more">더 알아보기</string>
    <string name="terms_of_use">이용 약관</string>
    <string name="data_policy">데이터 정책</string>
    <string name="location_based_function">위치 기반 기능</string>
    <string name="add_comment">댓글 달기…</string>
    <string name="create_user_name">사용자 이름 만들기</string>
    <string name="tag_people">사람 태그하기</string>
    <string name="add_location">위치 추가</string>
    <string name="detail_setting">고급 설정</string>
    <string name="add_reply">답글 달기</string>
    <string name="edit_profile">프로필 편집</string>
    <string name="taged_photo_and_video">내가 태그된 사진과 동영상</string>

    <string name="input_phone_number_or_email_address">전화번호 또는 이메일 주소 입력</string>
    <string name="sign_up_by_phone_number_or_email_address">휴대폰 번호 또는 이메일 주소로 가입</string>
    <string name="input_auth_code_sent_to_phone_number">%s%s번으로\n전송된 인증코드를 입력하세요.</string>
    <string name="message_induce_sign_up">친구들의 사진과 동영상으로 보려면 가입하세요.</string>
    <string name="message_cannot_found_account">계정을 찾을 수 없음</string>
    <string name="not_include_open_profile">공개 프로필에 포함되지 않습니다.</string>
    <string name="message_not_match_to_user_name_format">아이디는 영어,숫자,\'_\',\'.\'만 사용 가능합니다.</string>
    <string name="message_duplicate_user_name">사용자 이름 %s을(를) 사용할 수 없습니다.</string>
    <string name="message_expire_jwt_token">토큰 만료, 재로그인이 필요합니다.</string>
    <string name="message_not_exist_feed">존재하지 않는 게시물입니다.</string>
    <string name="message_kakao_login_error">카카오 로그인 과정에서 문제가 발생했습니다.</string>
    <string name="message_network_error">정보를 불러오는데 실패했습니다. 잠시 후에 다시 실행해주세요</string>

    <string name="format_birthday">%d년 %d월 %d일</string>
    <string name="format_age">%d세</string>
    <string name="format_like_count">좋아요 %,2d</string>
    <string name="format_show_all_comment">댓글 %,2d개 모두 보기</string>
    <string name="format_count">%d/%d</string>
    <string name="format_loginid_and_content"><b>%s</b> %s</string>
    <string name="format_before_second">%d초 전</string>
    <string name="format_before_minute">%d분 전</string>
    <string name="format_before_hour">%d시간 전</string>
    <string name="format_before_day">%d일 전</string>
    <string name="format_date">%d월 %d일</string>

    <string name="description_input_number">보안 및 로그인 목적으로 Instagram에서 보내는\nSMS 알림을 수신할 수 있습니다.</string>
    <string name="description_cannot_founc_account">
        %s에 연결된 계정을 찾을 수 없습니다. 다른 전화번호나 이메일 주소를 사용해보세요. Instagram 계정이 없으면 가입할 수 있습니다.
    </string>
    <string name="description_input_name">친구들이 회원님을 찾을 수 있도록 이름을 추가하세요.</string>
    <string name="description_input_birthday">비즈니스나 반려동물을 위한 계정인 경우에도 회원님의 생일을 사용하세요.</string>
    <string name="description_create_user_name">새 계정에 사용할 사용자 이름을 선택하세요. 나중에 언제든지 변경할 수 있습니다.</string>
    <string name="description_create_account_confirmation">나중에 언제든지 사용자 이름을 변경할 수 있습니다.</string>
    <string name="description_agree_to_terms">Instagram은 회원님의 개인 정보를 안전하게 보호합니다. 새 계정을 만들려면 모든 약관에 동의하세요.</string>
    <string name="description_taged_photo_and_video">사람들이 회원님을 사진 및 동영상에 태그하면\n태그된 사진 및 동영상이 여기에 표시됩니다.</string>

    <string name="question_do_not_have_an_account">계정이 없으신가요?</string>
    <string name="question_already_have_an_account">이미 계정이 있으신가요?</string>
    <string name="question_forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="question_create_account_with_user_name">%s\n님으로 가입하시겠어요?</string>
    <string name="why_input_birthday">왜 생일을 입력해야 하나요?</string>


    <string name="hint_message_login_id">전화번호, 사용자 이름 또는 이메일</string>
    <string name="hint_input_text_content">문구 입력…</string>
    
    <string name="not_progress_email_process">이메일은 진행하지 않습니다.</string>
</resources>