<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_current_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.6"
            android:orientation="horizontal"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvbtn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/cancel"
            android:paddingHorizontal="@dimen/interval_middle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvbtn_next"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/next"
            android:paddingHorizontal="@dimen/interval_middle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/blue"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/text_title2"
            android:gravity="center"
            android:text="@string/new_feed"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_current"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tvbtn_cancel"
            app:layout_constraintBottom_toBottomOf="@id/guide_current_bottom"
            android:background="@color/black"
            tools:background="@color/white"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivbtn_spread_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintStart_toStartOf="@id/iv_current"
            app:layout_constraintBottom_toBottomOf="@id/iv_current"
            android:layout_margin="@dimen/interval_middle"
            android:background="@drawable/shape_spread_button"
            android:scaleType="center"
            android:tint="@color/white"
            android:src="@drawable/ic_spread"/>

        <LinearLayout
            android:id="@+id/layout_sort"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/iv_current"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/recent_content"
                android:layout_marginStart="@dimen/interval_middle"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_baseline_arrow_bottom_24"
                android:scaleType="center"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/layout_sort"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>