<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_content_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/layout_padding"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_content_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/layout_padding"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_content_start"
            app:layout_constraintEnd_toEndOf="@id/guide_content_end"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/interval_extreme"
            android:text="@string/agree_to_terms"
            style="@style/text_title"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description_agree_to_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_content_start"
            app:layout_constraintEnd_toEndOf="@id/guide_content_end"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:paddingHorizontal="@dimen/layout_padding"
            android:layout_marginTop="@dimen/interval_middle"
            android:text="@string/description_agree_to_terms"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray50"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            android:layout_marginBottom="@dimen/interval_middle"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/interval_middle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/interval_middle"
            style="@style/login_button"
            android:text="@string/next"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>