<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.softsquared.gridge_test.android.instagram_challenge.page.sign_up.password.SignUpPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_content_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/layout_padding"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_content_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/layout_padding"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_content_start"
            app:layout_constraintEnd_toEndOf="@id/guide_content_end"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/interval_extreme"
            android:text="@string/create_password"
            style="@style/text_title"/>

        <com.softsquared.gridge_test.android.instagram_challenge.custom_view.ViewLoginEditText
            android:id="@+id/view_edittext_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_content_start"
            app:layout_constraintEnd_toEndOf="@id/guide_content_end"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:input_type="password"
            app:max_length="20"
            app:hint_message="@string/password"
            innerText="@{viewModel.password}"
            android:layout_marginTop="56dp"
            tools:layout_height="56dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="@id/guide_content_start"
            app:layout_constraintEnd_toEndOf="@id/guide_content_end"
            app:layout_constraintTop_toBottomOf="@id/view_edittext_password"
            style="@style/login_button"
            android:enabled="@{viewModel.nextButtonState}"
            android:layout_marginTop="56dp"
            android:text="@string/next"/>

        <include
            layout="@layout/view_login_botton_area"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>